; ModuleID = '/home/carl/AnghaBench/ijkplayer/ijkmedia/ijkplayer/extr_ff_ffplay.c_ffp_set_property_float.c'
source_filename = "/home/carl/AnghaBench/ijkplayer/ijkmedia/ijkplayer/extr_ff_ffplay.c_ffp_set_property_float.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @ffp_set_property_float(i32* %0, i32 %1, float %2) #0 {
  %4 = alloca i32*, align 8
  %5 = alloca i32, align 4
  %6 = alloca float, align 4
  store i32* %0, i32** %4, align 8
  store i32 %1, i32* %5, align 4
  store float %2, float* %6, align 4
  %7 = load i32, i32* %5, align 4
  switch i32 %7, label %16 [
    i32 129, label %8
    i32 128, label %12
  ]

8:                                                ; preds = %3
  %9 = load i32*, i32** %4, align 8
  %10 = load float, float* %6, align 4
  %11 = call i32 @ffp_set_playback_rate(i32* %9, float %10)
  br label %17

12:                                               ; preds = %3
  %13 = load i32*, i32** %4, align 8
  %14 = load float, float* %6, align 4
  %15 = call i32 @ffp_set_playback_volume(i32* %13, float %14)
  br label %17

16:                                               ; preds = %3
  br label %17

17:                                               ; preds = %16, %12, %8
  ret void
}

declare dso_local i32 @ffp_set_playback_rate(i32*, float) #1

declare dso_local i32 @ffp_set_playback_volume(i32*, float) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
